# m5squared

./: README.md  pyproject.toml
doc/: m25-protocol.md  usage-setup.md
doc/wip/: missing_commands.md
